...
  Scaffold(
      floatingActionButton = {},
      modifier = Modifier.testTag("commentsScreen"),
      topBar = {
        EditNoteTopBar(
            title = stringResource(R.string.comments),
            titleTestTag = "commentsTitle",
            noteViewModel = noteViewModel,
            navigationActions = navigationActions)
      },
      bottomBar = {
        Column(modifier = Modifier.background(MaterialTheme.colorScheme.surface)) {
          HorizontalDivider(
              color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.12f), thickness = 0.5.dp)

          SendCommentBar(
              currentUser = currentUser,
              note = noteUpdated,
              updatedComments = updatedComments,
              {
                val newNote = noteUpdated!!.copy(comments = Note.CommentCollection(it.commentsList))
                noteViewModel.selectedNote(newNote)
...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(8.dp)) {
          // TextField for entering a comment
          OutlinedTextField(
              value = commentText,
              onValueChange = { commentText = it },
              modifier = Modifier.weight(1f).padding(bottom = 8.dp).testTag("SendCommentTextField"),
              label = { Text(stringResource(R.string.enter_comment_here)) },
              placeholder = { Text(stringResource(R.string.enter_comment_here)) })

          // Send Button
          FloatingActionButton(
              modifier = Modifier.testTag("SendCommentButton"),
              onClick = {
                if (commentText.isNotEmpty()) {
                  val newComments =
                      updatedComments.addCommentByUser(
                          currentUser.uid, currentUser.userName, commentText)
                  onCommentsChange(newComments)
...
    currentUser: User,
    note: Note,
    userViewModel: UserViewModel,
    fileViewModel: FileViewModel
) {
  if (updatedComments.commentsList.isEmpty()) {
    NoCommentsText()
  } else {
    updatedComments.commentsList.forEach { comment ->
      CommentRow(
          comment = comment,
          updatedComments = updatedComments,
          onCommentsChange = onCommentsChange,
...
        }
    Row(modifier = Modifier.fillMaxWidth().padding(horizontal = 8.dp, vertical = 4.dp)) {
      TextField(
          value = currentContent,
          onValueChange = { currentContent = it },
          placeholder = { Text(stringResource(R.string.enter_comment_here)) },
          modifier = Modifier.weight(1f).testTag("EditCommentTextField"))
      IconButton(
          modifier = Modifier.testTag("SaveCommentButton"),
          onClick = {
            val updatedCollection =
                updatedComments.editCommentByCommentId(comment.commentId, currentContent)
            onCommentsChange(updatedCollection)
            isEditing = false
          }) {
...
                modifier = Modifier.weight(2f).alpha(0.7f).padding(start = 4.dp))
            // Options menu on the right
            if (comment.isOwner(currentUser.uid) || note.isOwner(currentUser.uid)) {
              Box { // Anchor box for the dropdown
                IconButton(
                    onClick = { expanded = true },
                    modifier = Modifier.testTag("CommentOptionsButton")) {
                      Icon(
                          imageVector = Icons.Default.MoreVert, contentDescription = "More Options")
                    }
                CommentOptionsMenu(
                    comment = comment,
                    updatedComments = updatedComments,
                    onCommentsChange = onCommentsChange,
                    currentUser = currentUser,
                    note = note,
                    expanded = expanded,
...
              }
            }
          }

      Text(
          text = comment.content,
          modifier = Modifier.fillMaxWidth().padding(horizontal = 8.dp).testTag("CommentContent"),
          style = Typography.bodyLarge)
    }
  }
  HorizontalDivider(color = Color.Gray, thickness = 0.5.dp)
}
/**
...
      onDismissRequest = onDismissRequest // Use callback to handle dismissal
      ) {
        if (comment.isOwner(currentUser.uid)) {
          DropdownMenuItem(
              modifier =
                  Modifier.background(MaterialTheme.colorScheme.onPrimary)
                      .testTag("EditCommentMenuItem"),
              text = { Text("Edit comment") },
              onClick = {
                onDismissRequest()
                onEditRequest()
              })
        }
        if (comment.isOwner(currentUser.uid) || note.isOwner(currentUser.uid)) {
          DropdownMenuItem(
              modifier =
                  Modifier.background(MaterialTheme.colorScheme.onPrimary)
                      .testTag("DeleteCommentMenuItem"),
              text = { Text("Delete comment") },
              onClick = {
                onDismissRequest()
                onCommentsChange(updatedComments.deleteCommentByCommentId(comment.commentId))
              })
        }
...
